[gd_scene load_steps=9 format=3 uid="uid://cospnyybfrr3e"]

[ext_resource type="Texture2D" uid="uid://ca0nbmy8ytl44" path="res://assets/graphics/environment/terminal.png" id="1_ugsui"]
[ext_resource type="Script" uid="uid://hirrues78v7n" path="res://objects/terminal/terminal.gd" id="1_w4gef"]
[ext_resource type="Script" uid="uid://bg7xpsd2h4n4j" path="res://scripts/nodes/interactable.gd" id="2_2374n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2374n"]
atlas = ExtResource("1_ugsui")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4gef"]
atlas = ExtResource("1_ugsui")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xu0uc"]
atlas = ExtResource("1_ugsui")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_06yku"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2374n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4gef")
}],
"loop": true,
"name": &"active",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xu0uc")
}],
"loop": false,
"name": &"inactive",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w4gef"]
size = Vector2(12, 10)

[node name="Terminal" type="Node2D"]
script = ExtResource("1_w4gef")

[node name="ASprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_06yku")
animation = &"inactive"
frame_progress = 1.0
offset = Vector2(0, -8)

[node name="TriggerArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_w4gef")

[node name="Interactable" type="Node" parent="TriggerArea"]
script = ExtResource("2_2374n")
metadata/_custom_type_script = "uid://bg7xpsd2h4n4j"

[connection signal="focus_entered" from="TriggerArea/Interactable" to="." method="_on_interactable_focus_entered"]
[connection signal="focus_exited" from="TriggerArea/Interactable" to="." method="_on_interactable_focus_exited"]
[connection signal="interacted" from="TriggerArea/Interactable" to="." method="_on_interactable_interacted"]
